--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <section class="services"></section>
+    <section class="services">
         <div class="h2">
             <h2>Naše Služby</h2>
         </div>
