--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div id="logo"></div>
             </div>
             <!-- Burger menu ovládání -->
-        <input type="checkbox" id="toggle" />
+        <input type="checkbox" id="toggle">
         <label for="toggle" id="burger-menu">
             <span></span>
             <span></span>
